--- a/Assets/MorePlatforms/StaticFiles/Localisation/enUS.txt
+++ b/Assets/MorePlatforms/StaticFiles/Localisation/enUS.txt
@@ -28,3 +28,6 @@ Tobbert.DoubleReinforcedPlatform.FlavorDescription,"Stack, stack it to the top!"
 Tobbert.TripleReinforcedPlatform.DisplayName,Triple Reinforced Platform,-
 Tobbert.TripleReinforcedPlatform.Description,A platform which can be used in combination with the Side Platforms. Serves as a better looking option than levees.,-
 Tobbert.TripleReinforcedPlatform.FlavorDescription,"Stack, stack, stack it to the top!",-
+
+Tobbert.CategoryReinforcedPlatforms.DisplayName,"Reinforced Platforms",-
+Tobbert.CategorySidePlatforms.DisplayName,"Side Platforms",-
