--- a/Assets/ChooChoo/StaticFiles/lang/enUS.txt
+++ b/Assets/ChooChoo/StaticFiles/lang/enUS.txt
@@ -3,4 +3,16 @@ Tobbert.TrackStraight.DisplayName,Straight Train Track,-
 Tobbert.TrackStraight.Description,A Track Piece that goes straight.,-
 Tobbert.TrackStraight.FlavorDescription,Choo! Choo!,-
 
+Tobbert.TrackCorner1x1.DisplayName,Corner 1x1 Track,-
+Tobbert.TrackCorner1x1.Description,A Track Piece that around a corner.,-
+Tobbert.TrackCorner1x1.FlavorDescription,Might be a little tight.,-
+
+Tobbert.TrackCorner2x2.DisplayName,Corner 2x2 Track,-
+Tobbert.TrackCorner2x2.Description,A Track Piece that around a larger corner.,-
+Tobbert.TrackCorner2x2.FlavorDescription,Might be a little tight.,-
+
+Tobbert.TrainStation.DisplayName,Train Station,-
+Tobbert.TrainStation.Description,A destination for trains.,-
+Tobbert.TrainStation.FlavorDescription,Choo! Choo!,-
+
 Tobbert.Train.Name,Train,-
