--- a/Assets/ChooChoo/TODO.txt
+++ b/Assets/ChooChoo/TODO.txt
@@ -1,1 +1,13 @@
 https://discord.com/channels/558398674389172225/888491376143134760/1050839599892668506
+
+
+Unfinished:
+- Goodsstation stackable strict not connected
+- Derailing
+
+
+Fixed: 
+- Disable goodsstation within same district 
+- Shouldnt pathfind over unfinished tracks
+- Added German Translation
+
