--- a/Assets/ChooChoo/StaticFiles/lang/jaJP.txt
+++ b/Assets/ChooChoo/StaticFiles/lang/jaJP.txt
@@ -1,15 +1,15 @@
 ID,Text,Comment
 Tobbert.TrackStraight.DisplayName,直進線路,-Straight Train Track
 Tobbert.TrackStraight.Description,直進する線路。,-A Track Piece that goes straight.
-Tobbert.TrackStraight.FlavorDescription,ガタンゴトン！,-Choo! Choo!
+Tobbert.TrackStraight.FlavorDescription,げっ歯類の列車、これが本当のチューチュートレイン。,原文「Choo! Choo!」は機関車の「ポッポー！」のオノマトペ。それを元にした日本の有名な曲名「チューチュートレイン」とネズミの鳴き声をかけた駄洒落。
 
 Tobbert.TrackOneWay.DisplayName,一方通行の信号,-One way signal Track
-Tobbert.TrackOneWay.Description,列車に矢印の方向にしか進めないことを示す。閉そくを区切る効果もある。,-Wil tell trains that they can only go through the green side.
+Tobbert.TrackOneWay.Description,列車を矢印の方向にしか進めないようにする線路。閉そくを区切る効果もある。1つの閉そく区間は色つきの線で表示され、一度に1編成だけ列車が入れる。,-Wil tell trains that they can only go through the green side.
 Tobbert.TrackOneWay.FlavorDescription,ここへ来てはいけない！すぐ戻れ！,-千と千尋。原文「You... Shall... Pass...」はロード・オブ・ザ・リングの改変
 
 Tobbert.TrackHillStart.DisplayName,勾配線路,-Slope Track
 Tobbert.TrackHillStart.Description,列車の高さを変えられる線路。,-A track that lets trains go up and down.
-Tobbert.TrackHillStart.FlavorDescription,勾配抵抗にご用心,-Is the train not to heavy?
+Tobbert.TrackHillStart.FlavorDescription,勾配抵抗にご用心。,-Is the train not to heavy?
 
 Tobbert.TrackCorner1x1.DisplayName,カーブ線路 1x1,-Corner 1x1 Train Track
 Tobbert.TrackCorner1x1.Description,角を曲がるための線路。,-A Track Piece that around a corner.
@@ -19,12 +19,12 @@ Tobbert.TrackCorner2x2.DisplayName,カーブ線路 2x2,-Corner 2x2 Train Track
 Tobbert.TrackCorner2x2.Description,より大きな角を曲がるための線路。,-A Track Piece that around a larger corner.
 Tobbert.TrackCorner2x2.FlavorDescription,なんてオシャレなカーブだ。,-What a nice looking curve.
 
-Tobbert.TrackTIntersection1x1.DisplayName,T字型ポイント線路 1x1,-T intersection Train Track
-Tobbert.TrackTIntersection1x1.Description,T字型のポイント線路。,-A intersection in the form of a T for trains.
+Tobbert.TrackTIntersection1x1.DisplayName,丁字型ポイント線路 1x1,-T intersection Train Track
+Tobbert.TrackTIntersection1x1.Description,丁字型のポイント線路。,-A intersection in the form of a T for trains.
 Tobbert.TrackTIntersection1x1.FlavorDescription,どちらの線路を選ぶべきだろうか？,-Which way should I go?
 
-Tobbert.TrackTIntersection2x3.DisplayName,T字型ポイント線路 2x3,-T intersection Train Track
-Tobbert.TrackTIntersection2x3.Description,T字型のポイント線路。,-A intersection in the form of a T for trains.
+Tobbert.TrackTIntersection2x3.DisplayName,丁字型ポイント線路 2x3,-T intersection Train Track
+Tobbert.TrackTIntersection2x3.Description,丁字型のポイント線路。,-A intersection in the form of a T for trains.
 Tobbert.TrackTIntersection2x3.FlavorDescription,その線路の先には何がある？,-Where will those paths lead to?
 
 Tobbert.TrainStation.DisplayName,鉄道駅,-Train Station
@@ -34,6 +34,7 @@ Tobbert.TrainStation.FlavorDescription,ポッポー！,-Choo! Choo!
 Tobbert.GoodsStation.DisplayName,貨物駅,-Goods station
 Tobbert.GoodsStation.Description,列車で積み降ろしする貨物の保管施設。「取り扱い貨物を設定」から何を積み降ろしするのかを複数指定できる。,-"A building that holds items ready for pickup and deliveries from trains. Edit the allowed goods to specify what goods can be received and delivered."
 Tobbert.GoodsStation.FlavorDescription,とくとご覧あれ、この収納力の高さを。,-Look at all the goods It can hold.
+
 Tobbert.GoodsStation.GoodSelector,取り扱い貨物を設定,-Edit allowed goods
 Tobbert.GoodsStation.Loading,積む: ,-Sending:
 Tobbert.GoodsStation.Unloading,降ろす: ,-Receiving:
@@ -52,7 +53,8 @@ Tobbert.Train.PrefabName,機関車,-Train
 Tobbert.Wagon.PrefabName,無蓋車,-Wagon
 
 Tobbert.BatchControl.Trains,列車,-Trains
-Tobbert.Train.Length,両数: ,-Train Length: 
+Tobbert.Train.Length,編成両数: ,他候補：編成長-Train Length: 
+Tobbert.Train.Destroy,本当に選択中の列車を撤去しますか？,-Are you sure you want to destroy this train?
 
 Tobbert.TrainSchedule.AddNewStation,新しい駅,-New Station
 Tobbert.TrainSchedule.AddNewTrainAction,新しい運行計画,-New Action
@@ -65,8 +67,10 @@ Tobbert.TrainAction.TakeGoods.TakeGoodAmount,貨物扱い: ,-
 
 Tobbert.ToolGroup.Trains,鉄道,-Trains
 
-Tobbert.TrainYard.PreviewErrorMessage,Only 1 Train Yard can be build,-
+Tobbert.TrainYard.PreviewErrorMessage,Only 1 Train Yard can be build,-未使用？
 
 Tobbert.Trains.UnlockPrompt,{1}を建設するには、先に{0}を解放してください。,{0} stands for <Building>.DisplayName {1} stands for <TrackPiece>.DisplayName.
 
 Tobbert.DistributionTrain.MinimumOfItemsToMove,最小輸送ロット数: ,-Minimum of items to move: 
+
+Tobbert.TrainNavigation.Unstuck,方向転換する,機回し。分かりやすさ優先-Turn Around
