--- a/Assets/ChooChoo/StaticFiles/lang/enUS.txt
+++ b/Assets/ChooChoo/StaticFiles/lang/enUS.txt
@@ -7,6 +7,10 @@ Tobbert.TrackOneWay.DisplayName,One way signal Track,-
 Tobbert.TrackOneWay.Description,Wil tell trains that they can only go through the green side.,-
 Tobbert.TrackOneWay.FlavorDescription,You... Shall... Pass...,-
 
+Tobbert.TrackCrossing.DisplayName,Train Track Crossing,-
+Tobbert.TrackCrossing.Description,Beavers can cross the tracks here. Collision will not be implemented as performance will suffer too much.,-
+Tobbert.TrackCrossing.FlavorDescription,That train is approaching very fa-,RIP
+
 Tobbert.TrackHillStart.DisplayName,Slope Track,-
 Tobbert.TrackHillStart.Description,A track that lets trains go up and down.,-
 Tobbert.TrackHillStart.FlavorDescription,Is the train not to heavy?,-
@@ -54,7 +58,7 @@ Tobbert.TrainYard.DisplayName,Train Yard,-
 Tobbert.TrainYard.Description,A building that creates trains.,-
 Tobbert.TrainYard.FlavorDescription,This is where trains are born.,-
 Tobbert.TrainYard.CostOfTrain,Cost of 1 train:,-
-Tobbert.TrainYard.CreateTrain,Create train: ,-
+Tobbert.TrainYard.CreateTrain,Build train,-
 
 Tobbert.Train.PrefabName,Train,-
 Tobbert.Wagon.PrefabName,Wagon,-
@@ -71,6 +75,10 @@ Tobbert.TrainAction.Wait.WaitingInMinutes,Hours to wait: ,-
 
 Tobbert.TrainAction.TakeGoods,Take Goods,-
 Tobbert.TrainAction.TakeGoods.TakeGoodAmount,Take goods: ,-
+
+Tobbert.TrackSystem.ToggleSectionDivider,Divides sections: ,-
+Tobbert.TrackSystem.ButtonChangeDirection,Change direction,-
+Tobbert.TrackSystem.CollidingSectionDividers,Cannot connect 2 Section Dividers,-
 
 Tobbert.ToolGroup.Trains,Trains,-
 
