--- a/Assets/ChooChoo/StaticFiles/lang/deDE.txt
+++ b/Assets/ChooChoo/StaticFiles/lang/deDE.txt
@@ -1,10 +1,10 @@
 ID,Text,Comment
 Tobbert.TrackStraight.DisplayName,Gleis Gerade,-
-Tobbert.TrackStraight.Description,Ein gerades Zuggleis.,-
+Tobbert.TrackStraight.Description,"Ein gerades Zuggleis. Kann in ein Einbahngleis umgewandelt werden, indem man auf das Feld klickt. Erzeugt einen Gleisabschnitt zwischen Einbahngleisen, auf dem ein einzelner Zug fahren kann (durch Farben gekennzeichnet).",-
 Tobbert.TrackStraight.FlavorDescription,Tschu-tschu!,-
 
 Tobbert.TrackOneWay.DisplayName,Einbahngleis,-
-Tobbert.TrackOneWay.Description,"Sagt den Zügen, dass sie nur auf der grünen Seite durchfahren können.",-
+Tobbert.TrackOneWay.Description,"Sagt den Zügen, dass sie nur auf der grünen Seite durchfahren können. Erzeugt einen Gleisabschnitt zwischen Einbahngleisen, auf dem ein einzelner Zug fahren kann (durch Farben gekennzeichnet). Kann in ein Gleis Gerade umgewandelt werden, indem man auf das Feld klickt.",-
 Tobbert.TrackOneWay.FlavorDescription,Du... Sollst... Passieren...,-
 
 Tobbert.TrackCrossing.DisplayName,Gleisübergang,-
@@ -50,6 +50,13 @@ Tobbert.GoodsStation.GoodSelector,Zulässige Waren bearbeiten,-
 Tobbert.GoodsStation.Loading,Liefern: ,-
 Tobbert.GoodsStation.Unloading,Empfangen: ,-
 
+Tobbert.PassengerStation.DisplayName,Passagierbahnhof,-
+Tobbert.PassengerStation.Description,"An diesen Bahnhöfen können die Biber in den Zug einsteigen und zu anderen, miteinander verbundenen, Bahnhöfen fahren.",-
+Tobbert.PassengerStation.FlavorDescription,"Biber-Zug!",-
+Tobbert.PassengerStation.DistrictObjectToggle,Geht über Distrikte hinaus: ,-
+Tobbert.PassengerStation.DistrictObject,"Wenn diese Option aktiviert ist, können Biber NUR Passagierbahnhöfe aufsuchen, bei denen diese Einstellung ebenfalls aktiviert ist und die sich in anderen Distrikten befinden. ",-
+Tobbert.PassengerStation.EmptyStation,Zurzeit warten keine Passagiere.,-
+
 Tobbert.WaitingStation.DisplayName,Wartestation,-
 Tobbert.WaitingStation.Description,"Hier können Züge warten, wenn sie nichts zu tun haben. Dadurch wird verhindert, dass Züge die Gleise besetzen. Züge können nicht über diesen Bereich fahren, also stellen Sie sicher, dass er nicht in einem wichtigen Weg liegt.",-
 Tobbert.WaitingStation.FlavorDescription,Wann kann ich wieder fahren?,-
@@ -73,19 +80,11 @@ Tobbert.WagonModel.TankWagon,Tankwagen,-
 Tobbert.WagonModel.FlatWagon,Flachwagen,-
 Tobbert.WagonModel.FlipperWagon,Gondelwagen,-
 Tobbert.WagonModel.MetalCart,Metallwagen,-
+Tobbert.WagonModel.PassengerWagon,Passagierwagen,-
 
 Tobbert.BatchControl.Trains,Züge,-
 Tobbert.Train.Length,Zuglänge: ,-
 Tobbert.Train.Destroy,Soll der Zug wirklich zerstört werden?,-
-
-Tobbert.TrainSchedule.AddNewStation,Neuer Zugbahnhof,-
-Tobbert.TrainSchedule.AddNewTrainAction,Neue Aktion,-
-
-Tobbert.TrainAction.Wait,Warten,-
-Tobbert.TrainAction.Wait.WaitingInMinutes,Wartezeit: ,-
-
-Tobbert.TrainAction.TakeGoods,Güter annehmen,-
-Tobbert.TrainAction.TakeGoods.TakeGoodAmount,Güter annehmen: ,-
 
 Tobbert.TrackSystem.ToggleSectionDivider,Trennt Streckenabschnitte: ,-
 Tobbert.TrackSystem.ButtonChangeDirection,Richtung wechseln,-
